--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swiper": "^1.5.14",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "expo-camera": "~8.0.0",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
