--- a/app.json
+++ b/app.json
@@ -1,13 +1,10 @@
 {
   "expo": {
+    "scheme": "myapp",
     "name": "Blank Template",
     "slug": "base-frontend",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -19,11 +16,12 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
+    },
+    "infoPlist": {
+      "LSApplicationQueriesSchemes": ["lyft"]
     }
   }
 }
