--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "expo": "^36.0.0",
+    "expo-camera": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-permissions": "~8.0.0",
+    "firebase": "^7.12.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
@@ -24,9 +27,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swiper": "^1.5.14",
-    "react-native-web": "^0.11.7",
-    "expo-camera": "~8.0.0",
-    "expo-permissions": "~8.0.0"
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
