--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.14",
     "react-native-web": "^0.11.7"
   },
