--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.2.0",
+    "@react-navigation/drawer": "^5.3.4",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "expo": "^36.0.0",
