--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.14",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.3.3",
+    "react-navigation-drawer": "^2.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
