--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.2.0",
     "@react-navigation/drawer": "^5.3.4",
+    "@react-navigation/material-top-tabs": "^5.1.6",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "expo": "^36.0.0",
@@ -30,6 +31,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.14",
+    "react-native-tab-view": "^2.13.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.3",
     "react-navigation-drawer": "^2.4.7"
