--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/material-top-tabs": "^5.1.6",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
+    "base-64": "^0.1.0",
     "expo": "^36.0.0",
     "expo-camera": "~8.0.0",
+    "expo-facebook": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "~8.0.0",
-    "firebase": "^7.12.0",
+    "firebase": "^7.14.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
